# odp-embedded-usb-pd

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: check.yml
docs/ucsi/: ppm_state_machine.mmd
src/: ado.rs  constants.rs  lib.rs  pdinfo.rs  type_c.rs  usb.rs  vdm.rs
src/asynchronous/: controller.rs
src/pdo/: mod.rs  rdo.rs  sink.rs  source.rs
src/ucsi/: cci.rs  lpm.rs  mod.rs  ppm.rs
src/ucsi/lpm/: connector_reset.rs  get_alternate_modes.rs  get_cable_property.rs  get_cam_supported.rs  get_connector_capability.rs  get_connector_status.rs  get_current_cam.rs  get_error_status.rs  get_pdos.rs  mod.rs  set_ccom.rs  set_new_cam.rs  set_pdr.rs  set_power_level.rs  set_uor.rs
src/ucsi/ppm/: ack_cc_ci.rs  cancel.rs  get_capability.rs  mod.rs  ppm_reset.rs  set_notification_enable.rs  state_machine.rs
src/vdm/: mod.rs
src/vdm/structured/: header.rs  mod.rs  svid.rs
src/vdm/structured/command/: mod.rs
src/vdm/structured/command/discover_identity/: active_cable_vdo.rs  dfp_vdo.rs  id_header_vdo.rs  mod.rs  passive_cable_vdo.rs  product_vdo.rs  ufp_vdo.rs  vpd_vdo.rs
src/vdm/structured/command/discover_identity/sop/: id_header_vdo.rs  mod.rs
src/vdm/structured/command/discover_identity/sop_prime/: id_header_vdo.rs  mod.rs
supply-chain/: audits.toml  config.toml
